# python-project-lvl1

./: .gitignore  Makefile  README.md  calc.cast  even.cast  gcd.cast  prime.cast  prog.cast  pyproject.toml  pyproject.tomlo
brain_games/: brain_games.py  cli.py  welcome.py
brain_games/games/: game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
