[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["shizomanya <mistic_aa@inbox.ru>"]
packages = [{ include = "brain_games" }]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-even = "brain_games.scripts.brain_even:main"
brain-games = "brain_games.scripts.brain_games:main"
brain_calc = "brain_games.scripts.brain_calc:run"
brain-gcd = "brain_games.scripts.brain_gcd:play_game"
brain_progression = "brain_games.scripts.brain_progression:brain_progression"
brain_prime.py = "brain_games.scripts.brain_prime:brain_prime"
